forage cluster methods documented
with updated references

--- a/CCCForage.qmd
+++ b/CCCForage.qmd
@@ -4,7 +4,9 @@
 **Description** 
 The Central CCE forage survey (known as the Rockfish Recruitment and Ecosystem Assessment Survey, RREAS) samples much of the West Coast each May to mid-June, using midwater trawls sampling between 30 and 45 m depths during nighttime hours. The survey targets young-of-the-year (YOY) rockfish species and a variety of other YOY and adult forage species, market squid, adult krill, and gelatinous zooplankton. Juvenile rockfish, anchovy, krill, and market squid are among the most important prey for CCE predators [@szoboszlai2015forage]. Time series presented here are from the "Core Area" of that survey, centered off Monterey Bay. Catch data were standardized by using a delta-GLM to estimate year effects while accounting for spatial and temporal covariates to yield relative abundance indices, shown with their approximate 95% confidence limits [@santora2021diverse]. This modeling approach was adopted in recent reports to reduce bias in 2020, when sampling effort and spatial coverage was severely constrained by the COVID-19 pandemic.
 
-Pelagic forage data from the Central CCE were provided by J. Field, T. Rogers, K. Sakuma, and J. Santora, NMFS/SWFSC, from the SWFSC Rockfish Recruitment and Ecosystem Assessment Survey (https://go.usa.gov/xGMfR). Similarity analysis and cluster plot by A. Thompson, NMFS/SWFSC.
+Pelagic forage data from the Central CCE were provided by J. Field, T. Rogers, K. Sakuma, and J. Santora, NMFS/SWFSC, from the SWFSC Rockfish Recruitment and Ecosystem Assessment Survey (https://go.usa.gov/xGMfR). 
+
+Dr. A. Thompson, NMFS/SWFSC, created the heat plots coupled with chronological clustering analysis to describe forage dynamics in the California Current Ecosystem in our annual Ecosystem Status reports. Detailed methods can be found in @thompson2019indicators, but a brief synopsis follows. To determine when changes in assemblage structure took place, we ran chronological cluster analyses based on Bray-Curtis dissimilarity matrices calculated from ln(x+1)-transformed mean abundances of each taxon [@juggins2015rioja]. Chronological clustering identifies which years have similar assemblages with the constraint that years are sequential. To help visualize taxa dynamics, we couple the chronological dendrograms with heat maps showing taxa Z-scores of species abundances in each year. We qualitatively discern the deepest breaks in assemblage structure based on the dendrograms and place vertical lines on the heatmaps to designate major changes to the forage assemblage.
 
 **Indicators**
 
