--- a/NCCForage.qmd
+++ b/NCCForage.qmd
@@ -5,7 +5,9 @@
 
 Several other taxa (e.g., anchovy, sardine, herring and mackerels) collected by the June JSOES surface trawl are not considered to be sampled quantitatively due to their behavior (i.e., depth in the water column during daylight hours) and mesh size of sampling gear. Thus, we do not report catch-per-unit-effort (CPUE) of these species, rather noting them in terms of their relative prevalence - the proportion of stations where they were caught.
 
-Pelagic forage data from the Northern CCE are provided by B. Burke, NMFS/NWFSC and C. Morgan, OSU/CIMRS. Data are derived from surface trawls taken during the NWFSC Juvenile Salmon & Ocean Ecosystem Survey (JSOES; https://www.fisheries.noaa.gov/west-coast/science-data/ocean-ecosystem-indicators-pacific-salmon-marine-survival-northern). Similarity analysis and cluster plot by A. Thompson, NMFS/SWFSC.
+Pelagic forage data from the Northern CCE are provided by B. Burke, NMFS/NWFSC and C. Morgan, OSU/CIMRS. Data are derived from surface trawls taken during the NWFSC Juvenile Salmon & Ocean Ecosystem Survey (JSOES; https://www.fisheries.noaa.gov/west-coast/science-data/ocean-ecosystem-indicators-pacific-salmon-marine-survival-northern). 
+
+Dr. A. Thompson, NMFS/SWFSC, created the heat plots coupled with chronological clustering analysis to describe forage dynamics in the California Current Ecosystem in our annual Ecosystem Status reports. Detailed methods can be found in @thompson2019indicators, but a brief synopsis follows. To determine when changes in assemblage structure took place, we ran chronological cluster analyses based on Bray-Curtis dissimilarity matrices calculated from ln(x+1)-transformed mean abundances of each taxon [@juggins2015rioja]. Chronological clustering identifies which years have similar assemblages with the constraint that years are sequential. To help visualize taxa dynamics, we couple the chronological dendrograms with heat maps showing taxa Z-scores of species abundances in each year. We qualitatively discern the deepest breaks in assemblage structure based on the dendrograms and place vertical lines on the heatmaps to designate major changes to the forage assemblage.
 
 
 ```{r}
