--- a/esr-bibliography.bib
+++ b/esr-bibliography.bib
@@ -2246,3 +2246,10 @@ doi = {10.1371/journal.pbio.1000014}
   author={Satterthwaite, W},
   year={2022}
 }
+
+@article{juggins2015rioja,
+  title={Rioja: analysis of quaternary science data},
+  author={Juggins, Steve},
+  year={2015},
+  publisher={Newcastle University}
+}
