--- a/NCCForage.qmd
+++ b/NCCForage.qmd
@@ -7,7 +7,12 @@ Several other taxa (e.g., anchovy, sardine, herring and mackerels) collected by 
 
 Pelagic forage data from the Northern CCE are provided by B. Burke, NMFS/NWFSC and C. Morgan, OSU/CIMRS. Data are derived from surface trawls taken during the NWFSC Juvenile Salmon & Ocean Ecosystem Survey (JSOES; https://www.fisheries.noaa.gov/west-coast/science-data/ocean-ecosystem-indicators-pacific-salmon-marine-survival-northern). 
 
-Dr. A. Thompson, NMFS/SWFSC, created the heat plots coupled with chronological clustering analysis to describe forage dynamics in the California Current Ecosystem in our annual Ecosystem Status reports. Detailed methods can be found in @thompson2019indicators, but a brief synopsis follows. To determine when changes in assemblage structure took place, we ran chronological cluster analyses based on Bray-Curtis dissimilarity matrices calculated from ln(x+1)-transformed mean abundances of each taxon [@juggins2015rioja]. Chronological clustering identifies which years have similar assemblages with the constraint that years are sequential. To help visualize taxa dynamics, we couple the chronological dendrograms with heat maps showing taxa Z-scores of species abundances in each year. We qualitatively discern the deepest breaks in assemblage structure based on the dendrograms and place vertical lines on the heatmaps to designate major changes to the forage assemblage.
+Dr. A. Thompson, NMFS/SWFSC, created the heat plots coupled with chronological clustering analysis to describe forage dynamics in the California Current Ecosystem in our annual Ecosystem Status reports. Detailed methods can be found in @thompson2019indicators, but a brief synopsis follows: 
+To determine when changes in assemblage structure took place, we ran chronological cluster analyses based on Bray-Curtis dissimilarity matrices calculated from ln(x+1)-transformed mean abundances of each taxon [@juggins2015rioja]. Chronological clustering identifies which years have similar assemblages with the constraint that years are sequential. 
+
+To help visualize taxa dynamics, we couple the chronological dendrograms with heat maps showing taxa Z-scores of species abundances in each year. We qualitatively discern the deepest breaks in assemblage structure based on the dendrograms and place vertical lines on the heatmaps to designate major changes to the forage assemblage. 
+
+The color scheme is based on the value of the z-score. The z-score is the (abundance of a species in a given year - mean abundance over the time series)/standard deviation. A negative value means that it is below the long-term mean and positive above the mean. The z-score ranges from about -2.4 to +2.4. The color scale goes from red = low, white = average, blue = high. Z-scores were used instead of abundances because in each data set there is typically one or two species that are much more abundant than the others, swamping the color change effect for the other species. By running z-scores you can see how much a given species changes relative to their range in abundance.
 
 
 ```{r}
