--- a/_setup.qmd
+++ b/_setup.qmd
@@ -6,7 +6,7 @@
 # download/update the excel file with the spreadsheet ####
 
 library(tidyverse)
-library(dplyr)
+#library(dplyr)
 library(httr)
 
 #-------- getMetadata(erddap_id) --------------
@@ -23,7 +23,8 @@ getMetadata <-function(erddap_id){
 #drive_download( as_id(file_id) , path = 'metadata.csv', overwrite = TRUE)
 #}
 
-  df = read.csv('CCIEA_metadata.csv')
+#  df = read.csv('CCIEA_metadata.csv')
+  df = read.csv('https://raw.githubusercontent.com/CCIEA-esr/CCIEA-uploader/refs/heads/master/data/CCIEA_metadata.csv')
   df_trimmed<- df %>% select(c('Component_Section', 'Subcomponent', 'ERDDAP_Dataset_ID', 'ERDDAP_query_value', 'Contact', 'Title', 'Institution', 'Source_Data', 'Additional_Calculations', 'region', 'latitude', 'longitude', 'latitude2', 'longitude2','Sampling_frequency','Figure_grouping','year_begin','year_end','PI_filename','cciea_filename','serve_flag','no_download'))
   meta <- df_trimmed %>% filter(ERDDAP_Dataset_ID==erddap_id & serve_flag==1)
   meta <- meta[order(meta$Figure_grouping),]
